Fixing the alignment of the attributes

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ html {
   box-sizing: inherit;
 }
 
+
 body {
   margin: 0;
 }
@@ -43,11 +44,12 @@ img {
 }
 
 .cards {
-  width: 40%;
+  width: 25%;
   background-color: #333;
   margin: 0em;
   display: inline-block;
-  margin-left: 5em;
+  margin-left: 13em;
+  display: stretch;
 }
 
 header {
@@ -80,7 +82,7 @@ h1 {
 
 .img-flex {
   display: block;
-  width: 60%;
+  width: 100%;
 }
 
 footer {
@@ -97,6 +99,19 @@ nav ul {
   list-style-type: none;
 }
 
+.big-image{
+  width: 20%;
+  margin-left: 60px;
+  margin-top: 50px;
+}
+p{
+  padding-bottom: 2em;
+  display: inline-block;
+}
+
+.text{
+  float: left;
+}
 nav li {
   text-align: left;
 }
